# curobo

./: .clang-format  .clangd  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  LICENSE_ASSETS  MANIFEST.in  README.md  environment.yml  kinematics.yml  pyproject.toml  setup.cfg  setup.py  sweep_collision.yml
.agent/: cpp_rules.mdc  design_principles.mdc  diataxis.mdc  documenter.mdc  file_naming.mdc  package_format_rules.mdc  python_rules.mdc  sphinx_md.mdc  tests.mdc
.devcontainer/: devcontainer.json
benchmark/: README.md  cost_gradient_benchmark.py  curobo_benchmark.py  curobo_nvblox_benchmark.py  curobo_nvblox_profile.py  curobo_profile.py  curobo_python_profile.py  curobo_voxel_benchmark.py  curobo_voxel_profile.py  generate_nvblox_images.py  ik_benchmark.py  inverse_dynamics_kernel_benchmark.py  kinematics_benchmark.py  kinematics_benchmark_default.py  metrics.py  motion_plan_benchmark.py  robometrics_benchmark.py  sweep_collision_benchmark.py
curobo/: __init__.py  _version.py  batch_motion_planner.py  collision_checking.py  config_io.py  inverse_kinematics.py  kinematics.py  logging.py  model_predictive_control.py  motion_planner.py  motion_retargeter.py  optim.py  perception.py  profiling.py  robot_builder.py  robot_parser.py  rollout.py  runtime.py  scene.py  sphere_fit.py  trajectory_optimizer.py  types.py  viewer.py
docker/: .dockerignore  README.md  aarch64.dockerfile  arm64.dockerfile  base.dockerfile  build_dev_docker.sh  build_docker.sh  build_user_docker.sh  isaac_sim.dockerfile  ros1_x86.dockerfile  start_dev_docker.sh  start_docker.sh  start_docker_aarch64.sh  start_docker_arm64.sh  start_docker_isaac_sim.sh  start_docker_isaac_sim_headless.sh  start_docker_x86.sh  start_docker_x86_robot.sh  start_user_docker.sh  user.dockerfile  user_isaac_sim.dockerfile  x86.dockerfile
docs/: Makefile  conf.py  index.rst  mathsymbols.tex  news.rst  technical_reports.rst
examples/: collision_check_example.py  comparison_for_sparrows.py  feat_exponential_dt_in_mpc_test.py  ik_example.py  kinematics_example.py  mesh_dataset.py  motion_gen_api_example.py  motion_gen_example.py  motion_gen_profile.py  mpc_example.py  nvblox_example.py  pose_sequence_example.py  robot_image_segmentation_example.py  torch_layers_example.py  trajopt_example.py  usd_example.py  visualize_trajectory.m  world_representation_example.py  write_pkl_to_yml.py
examples/bi-teleoperation/flexiv_rdk-main/: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/bi-teleoperation/flexiv_rdk-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/bi-teleoperation/flexiv_rdk-main/.github/workflows/: cmake.yml
examples/bi-teleoperation/flexiv_rdk-main/cmake/: FlexivInstallLibrary.cmake  flexiv_rdk-config.cmake.in
examples/bi-teleoperation/flexiv_rdk-main/doc/: Doxyfile.in
examples/bi-teleoperation/flexiv_rdk-main/example/: CMakeLists.txt  basics1_display_robot_states.cpp  basics2_clear_fault.cpp  basics3_primitive_execution.cpp  basics4_plan_execution.cpp  basics5_zero_force_torque_sensors.cpp  basics6_gripper_control.cpp  basics7_auto_recovery.cpp  intermediate1_realtime_joint_position_control.cpp  intermediate2_realtime_joint_torque_control.cpp  intermediate3_realtime_joint_floating.cpp  intermediate4_realtime_cartesian_pure_motion_control.cpp  intermediate5_realtime_cartesian_motion_force_control.cpp  intermediate6_robot_dynamics.cpp  intermediate7_teach_by_demonstration.cpp
examples/bi-teleoperation/flexiv_rdk-main/example_py/: basics1_display_robot_states.py  basics2_clear_fault.py  basics3_primitive_execution.py  basics4_plan_execution.py  basics5_zero_force_torque_sensors.py  basics6_gripper_control.py  basics7_auto_recovery.py  intermediate1_non_realtime_joint_position_control.py  intermediate2_non_realtime_cartesian_pure_motion_control.py  intermediate3_non_realtime_cartesian_motion_force_control.py  intermediate4_teach_by_demonstration.py  utility.py
examples/bi-teleoperation/flexiv_rdk-main/include/flexiv/: Data.hpp  Exception.hpp  Gripper.hpp  Log.hpp  Mode.hpp  Model.hpp  Robot.hpp  Scheduler.hpp  Utility.hpp
examples/bi-teleoperation/flexiv_rdk-main/resources/: flexiv_rizon10_kinematics.urdf  flexiv_rizon4_kinematics.urdf  flexiv_rizon4s_kinematics.urdf
examples/bi-teleoperation/flexiv_rdk-main/resources/meshes/rizon10/collision/: link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl
examples/bi-teleoperation/flexiv_rdk-main/resources/meshes/rizon10/visual/: link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
examples/bi-teleoperation/flexiv_rdk-main/resources/meshes/rizon4/collision/: link0.stl  link1.stl  link4.stl  link5.stl  link6.stl  link7.stl
examples/bi-teleoperation/flexiv_rdk-main/resources/meshes/rizon4/visual/: link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
examples/bi-teleoperation/flexiv_rdk-main/resources/meshes/rizon4s/collision/: link2.stl  link3.stl  link6.stl  link7.stl
examples/bi-teleoperation/flexiv_rdk-main/resources/meshes/rizon4s/visual/: link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
examples/bi-teleoperation/flexiv_rdk-main/test/: CMakeLists.txt  test_dynamics_engine.cpp  test_dynamics_with_tool.cpp  test_endurance.cpp  test_log.cpp  test_loop_latency.cpp  test_scheduler.cpp  test_timeliness_monitor.cpp
tests/: __init__.py  conftest.py  cost_test.py  cuda_graph_test.py  cuda_robot_generator_limits_test.py  cuda_robot_generator_test.py  curobo_robot_world_model_test.py  curobo_version_test.py  geom_test.py  geom_types_test.py  goal_test.py  ik_config_test.py  ik_module_test.py  ik_test.py  interpolation_test.py  kinematics_parser_test.py  kinematics_test.py  mimic_joint_test.py  motion_gen_api_test.py  motion_gen_constrained_test.py  motion_gen_cuda_graph_test.py  motion_gen_eval_test.py  motion_gen_goalset_test.py  motion_gen_js_test.py  motion_gen_module_test.py  motion_gen_speed_test.py  motion_gen_test.py  mpc_test.py  nvblox_test.py  (+16 more)
(+2281 files in other folders)
